<resources>
    <string name="app_name">ItUniverApp1</string>
    <string name="description">Description</string>
    <string name="phone">Phone:</string>
    <string name="email">Email:</string>
    <string name="number_phone">+780077892568</string>
    <string name="address_email">name@email.com</string>
    <string name="create_entry">Create entry</string>
    <string name="here_we_describe_the_vacancy">Here we describe the vacancy</string>
    <string name="here_we_describe_the_resume">Here we describe the resume</string>
    <string name="uploading_data">Uploading data</string>
    <string name="no_connection">No internet connection</string>
    <string name="requirement">Requirement:</string>
    <string name="responsibility">Responsibility:</string>
    <string name="not_description_specified">Description not specified</string>
    <string name="salary_not_specified">Salary not specified</string>
    <string name="employer_not_specified">Employer not specified</string>
    <string name="address_not_specified">Address not specified</string>
    <string name="not_phone">Not phone number</string>
    <string name="not_email">Not email</string>
    <string name="from">from&#160;</string>
    <string name="to">to&#160;</string>
    <string name="in">&#160;in&#160;</string>
</resources>
